# static-tree-barrier

./: CMakeLists.txt  README.md  main.cpp  mybarrier.hpp  statement.txt
