cmake_minimum_required(VERSION 2.8)
PROJECT(barrier)
SET(CMAKE_CXX_STANDARD 11)
MESSAGE(“MODEL_CHK_PATH=${MODEL_CHK_PATH}”)
IF(DEFINED MODEL_CHK_PATH)
    ADD_DEFINITIONS(-DWITH_CDS)
    INCLUDE_DIRECTORIES("${MODEL_CHK_PATH}/include")
    LINK_DIRECTORIES("${MODEL_CHK_PATH}")
ENDIF()

ADD_EXECUTABLE(barrier main.cpp mybarrier.hpp)
IF(DEFINED MODEL_CHK_PATH)
    TARGET_LINK_LIBRARIES(barrier "model")
ELSE()
    TARGET_LINK_LIBRARIES(barrier pthread)
ENDIF()

